--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 spring.cloud.vault.token: hvs.CAESINF-GcOr1au4Drt5mOzQBKWJMZCQorJCjSMvs_aNlCVmGh4KHGh2cy5pQXdGWWRmaHNhR0FQR2hHZEkwZUFCbGM
 
+spring.servlet.multipart.max-file-size: 5GB
+spring.servlet.multipart.max-request-size: 5GB
+
 spring.profiles.active: local
