--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,13 @@
 		<dependency>
 			<groupId>com.vincent.inc</groupId>
 			<artifactId>vies-spring-utils</artifactId>
-			<version>2.0.3</version>
+			<version>2.6.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.techgnious</groupId>
+			<artifactId>IVCompressor</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
